--- a/4_Umsetzung/Sourcecode/frontend/src/app/components/pages/questionnaire/questionnaire.component.css
+++ b/4_Umsetzung/Sourcecode/frontend/src/app/components/pages/questionnaire/questionnaire.component.css
@@ -5,7 +5,7 @@
 
     width: 100%;
     height: 100svh;
-
+    
     overflow: hidden;
 
     > h2 {
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
 
-    width: 75%;
+    width: calc(200% / 3);
     height: 100%;
 
     margin: 0 auto;
