--- a/4_Umsetzung/Sourcecode/frontend/src/app/components/sections/header/header.component.css
+++ b/4_Umsetzung/Sourcecode/frontend/src/app/components/sections/header/header.component.css
@@ -39,11 +39,12 @@
     > input {
         all: unset;
 
+        width: 50%;
+        height: 2em;
+        
         padding: 0 0.5em 0 0.5em;
 
         border: 1px solid var(--insel-grey);
-
-        width: 50%;
     }
 }
 
