--- a/4_Umsetzung/Sourcecode/frontend/src/styles.css
+++ b/4_Umsetzung/Sourcecode/frontend/src/styles.css
@@ -35,3 +35,62 @@ html, body {
 
     margin: 0;
 }
+
+input[type='radio'] {
+    all: unset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 1em;
+    height: 1em;
+
+    border: 1px solid var(--insel-grey);
+}
+
+input[type='radio']::before {
+    content: '';
+
+    width: 0.75em;
+    height: 0.75em;
+
+    background-color: var(--insel-grey);
+    scale: 0;
+    transition: 0.25s;
+}
+
+input[type='radio']:checked::before {
+    scale: 1;
+}
+
+input[type='text'] {
+    all: unset;
+
+    padding: 0.5em;
+
+    border: 1px solid var(--insel-grey);
+
+    transition: 0.25s;
+}
+
+input:focus {
+    box-shadow: 0 0 0.5em var(--insel-blue);
+}
+
+input[type='text']::placeholder {
+    color: rgba(0, 0, 0, 0.25)
+}
+
+button {
+    all: unset;
+
+    padding: 0.5em;
+
+    border: 1px solid var(--insel-grey);
+
+    transition: 0.25s;  
+}
+
+button:focus {
+    box-shadow: 0 0 0.5em var(--insel-green);
+}
